--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
 </head>
 <body>
     <div class="container">
-        <div class="text-left">
-            <div class="logo">Facebook</div>
-            <p>Connect with friends and the word <br>
-                 around you on facebook.</p>
-        </div>
-        <div class="text-right">
-            <form action="">
-                <input type="text" required placeholder="Email or phone number">
-                <input type="password" required placeholder="Password">
-                <input type="button" title="Log In">
-                <h5>Forgot password?</h5>
-                <button>Create new account</button>
-            </form>
+        <div class="content">
+            <div class="text-left">
+                <div class="logo">Facebook</div>
+                <p>Connect with friends and the word <br>
+                     around you on facebook.</p>
+            </div>
+            <div class="text-right">
+                <form action="">
+                    <input type="text" required placeholder="Email or phone number">
+                    <input type="password" required placeholder="Password">
+                    <input type="text" placeholder="Log In">
+                    <h5>Forgot password?</h5>
+                    <button>Create new account</button>
+                </form>
+            </div>
         </div>
     </div>
 </body>
