--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <input type="password" required placeholder="Password">
                     <input type="text" placeholder="Log In">
                     <h5>Forgot password?</h5>
-                    <button>Create new account</button>
+                    <input type="button" value="Create new account">
                 </form>
             </div>
         </div>
