--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <input type="text" required placeholder="Email or phone number">
                     <input type="password" required placeholder="Password">
                     <input type="text" placeholder="Log In">
-                    <h5>Forgot password?</h5>
+                    <a href="#">Forgot password?</a>
                     <input type="button" value="Create new account">
                 </form>
             </div>
