--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                      around you on facebook.</p>
             </div>
             <div class="text-right">
-                <form action="">
-                    <input type="text" required placeholder="Email or phone number">
-                    <input type="password" required placeholder="Password">
-                    <input type="text" placeholder="Log In">
-                    <a href="#">Forgot password?</a>
-                    <input type="button" value="Create new account">
+                <form action="#">
+                    <input type="text" name="Email" placeholder="Email or phone number" required>
+                    <input type="password" placeholder="Password" required>
+                    <input type="submit" value="Log In">
+                    <input type="button" value="Forgot password?">
+                    <input type="submit" value="Create new account">
                 </form>
             </div>
         </div>
